upgrade gradle, jdk14 compatibility