@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 repositories {
@@ -12,4 +12,15 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
+// RUN: ./gradlew run (from application plugin)
 mainClassName = 'be.kuleuven.JavaFXMain'
+
+// RUN: (using java -jar)
+// java -jar --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml gradlefxmlsample.jar
+jar {
+    manifest {
+        attributes 'Implementation-Title': project.getProperty('name'),
+                'Implementation-Version': project.getProperty('version'),
+                'Main-Class': project.getProperty('mainClassName')
+    }
+}
